# Spinify

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  sample_data
spinify/: config.py  main.py
spinify/api/: __init__.py  app.py  state.py
spinify/api/routes/: motors.py  nfc.py  playback.py  records.py  spotify.py
spinify/core/: __init__.py  button_service.py  motor_service.py  nfc_service.py  playback_cooldown.py  playback_sync.py  record_store.py  spotify_client.py
spinify/models/: __init__.py  motors.py  playback.py  record.py
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
web/src/: App.tsx  api.ts  index.css  spotify.ts
web/src/components/: RecordCard.tsx  SkeletonLoader.tsx  StatusCard.tsx
web/src/hooks/: usePolling.ts
web/src/pages/: Connect.tsx  Dashboard.tsx  Records.tsx  Settings.tsx
