[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spinify"
version = "0.1.0"
description = "Haptic turntable controller for Spotify"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "spotipy>=2.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.26.0",
    "responses>=0.24.0",
]
pi = [
    "RPi.GPIO>=0.7.1",
    "spidev>=3.6",
    "mfrc522>=0.0.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["spinify*"]
